# SE-RVC-UT

./: CMakeLists.txt  cppcheck_report.txt  main.c
.github/workflows/: code-analysis.yml
RVC_HW/: CMakeLists.txt
RVC_HW/include/: hw_interface.h
RVC_HW/src/: hw_interface.c
RVC_SW/: CMakeLists.txt
RVC_SW/include/: rvc.h
RVC_SW/src/: rvc.c
RVC_Test/: CMakeLists.txt
RVC_Test/include/: Mock_hw_interface.h  mock_hw_interface.h
RVC_Test/src/: Mock_hw_interface.c  mock_hw_interface.c  rvc_unit_test.c  test_runner.c  test_rvc.c
